Fixed spacing for widest screen

--- a/css/main.css
+++ b/css/main.css
@@ -479,6 +479,6 @@ main {
     }
 
     .surveyList > * {
-        flex: 0 33%;
+        flex: 0 33.33%;
     }
 }
